# petri_net_simulator

./: .gitignore  AGENTS.md  API_CONTRACT.md  CMakeLists.txt  CODEX_INIT_PROMPT.md  PLAN.md  PROJECT.md  README.md
docs/: CODE_DOCUMENTATION.md  DEMO_AND_TESTING_GUIDE.md  GITHUB_AND_CODEX_SETUP.md  INTEGRATION_CONTRACT.md
examples/: demo_runner.cpp  mutex.json  python_demo.py  simple_chain.json
include/doctest/: doctest.h
include/nlohmann/: json.hpp
include/petri/algorithm_selector/: algorithm_selector.hpp
include/petri/algorithms/: algorithms.hpp
include/petri/common/: result.hpp
include/petri/core_pn/: interpreter.hpp  model.hpp  petri_net.hpp
include/petri/graph_models/: directed_graph.hpp  reachability.hpp  star_forms.hpp
include/petri/logging_metrics/: metrics_logger.hpp
include/petri/runtime/: algorithm_runtime.hpp
include/petri/service_adapter/: json_api.hpp
include/petri/storage_api/: storage_api.hpp
src/algorithm_selector/: algorithm_selector.cpp
src/algorithms/: algorithms.cpp
src/bindings/: python_bindings.cpp
src/cli/: petri_cli.cpp
src/core_pn/: interpreter.cpp  petri_net.cpp
src/graph_models/: directed_graph.cpp  reachability.cpp  star_forms.cpp
src/logging_metrics/: metrics_logger.cpp
src/runtime/: algorithm_runtime.cpp
src/service_adapter/: json_api.cpp
src/storage_api/: storage_api.cpp
tests/: algorithm_selector_tests.cpp  algorithms_tests.cpp  core_pn_tests.cpp  graph_models_tests.cpp  integration_contract_tests.cpp  integration_tests.cpp  metrics_logger_tests.cpp  python_import_smoke_test.py  python_smoke_test.py  runtime_tests.cpp  service_adapter_tests.cpp  storage_api_tests.cpp
